# project_manage_agent

./: .env.example  .gitignore  .gitmessage.txt  Dockerfile  Makefile  README.md  SLACK_NOTION_SETUP.md  docker-compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  docs.md  feature.md  refactor.md  test.md
data/: reference_stories.numbers  reference_stories_250805  reference_stories_250807.xlsx
docker/: docker-compose.yaml
logs/: 2025-07-14.txt  2025-07-16.txt  2025-08-08.txt  2025-09-09.txt
notebooks/: estimate_story_point_of_devops.ipynb  excute_orchestrator.ipynb  generate_epic_of_devops.ipynb  generate_stoy_of_devops.ipynb
src/: main.py
src/common/: enums.py  feedback.py  models.py  request_response.py  workflow.py
src/epic/: models.py  prompts.py  routes.py  services.py
src/models/: models.py
src/node/: excute.py  prompt.py  service.py  user_node.py
src/notion_client/: client.py
src/notion_service/: __init__.py  client.py
src/orchestrator/: agent_nodes.py  manager.py  orchestrator.py  query_analyzer.py  routes.py  state_schema.py
src/project/: models.py  routes.py  services.py
src/prompt/: epic_detection_prompt.py  story_point_estimation.py  task2epic_story.py
src/routes/: epic_detection_route.py  project_management_route.py
src/services/: epic_detection_agent.py  project_management_orchestrator.py  story_point_agent.py
src/slack_bot/: bot.py  routes.py
src/story/: models.py  prompts.py  routes.py  services.py
test/: test_main.py  test_project_management.py
(+9 files in other folders)
