[project]
name = "project-manage-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "katalria",email = "wawa0070@naver.com"}
]
readme = "README.md"
requires-python = "==3.11.7"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "fastapi[standard]>=0.100.0",
    "pydantic>=2.0.0",
    "openai (>=1.84.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.3.24,<0.4.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
httpx = "^0.28.1"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
